--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <br clear="all">
     <footer>
-        <p>&copy; 2020 JMalcolm <span>//</span> HTML5 Map Created By: <a href="http://dougx.net/map/usmap.html" target="_blank">DougX.net</a></p>
+        <p>&copy; 2020 JMalcolm</p>
     </footer>
 
 </div>
